# WEB_HW_5

./: pyproject.toml
chat/: pyproject.toml  server.py
consol_bot/: main.py
